# pokeemerald-platinum

./: CMakeLists.txt  spritesheet_rules.mk
data/: event_scripts.s
data/layouts/: layouts.json
data/maps/: map_groups.json
data/maps/FloaromaTown/: map.json
data/maps/JubilifeCity/: map.json  scripts.inc
data/maps/JubilifeCity_Mart/: map.json
data/maps/JubilifeCity_PokemonCenter_1F/: map.json
data/maps/JubilifeCity_TowerA_1F/: map.json
data/maps/JubilifeCity_TowerA_2F/: map.json
data/maps/JubilifeCity_TowerB_1F/: map.json
data/maps/JubilifeCity_TowerB_2F/: map.json
data/maps/JubilifeCity_TowerC_1F/: map.json
data/maps/JubilifeCity_TowerC_2F/: map.json
data/maps/JubilifeCity_TrainerSchool/: map.json
data/maps/LakeVerity/: scripts.inc
data/maps/LittlerootTown_BrendansHouse_2F/: map.json
data/maps/LittlerootTown_MaysHouse_2F/: map.json
data/maps/OreburghGate/: map.json
data/maps/RavagedPath/: map.json
data/maps/Route201/: map.json
data/maps/Route203/: map.json
data/maps/Route204/: map.json
data/maps/Route204_North/: map.json
data/maps/SandgemTown/: map.json
data/maps/SandgemTown_Mart/: map.json
data/maps/SandgemTown_PokemonCenter_1F/: map.json  scripts.inc
data/maps/SandgemTown_PokemonCenter_2F/: scripts.inc
data/maps/TwinleafTown_PlayersHouse_1F/: scripts.inc
data/maps/TwinleafTown_PlayersHouse_2F/: map.json  scripts.inc
data/maps/TwinleafTown_RivalsHouse_2F/: map.json  scripts.inc
data/scripts/: movement.inc
decompiled-primary-tileset/: attributes.csv
decompiled-secondary-tileset/: attributes.csv
graphics/object_events/palettes/: bug_catcher_pt.pal
include/: gba_dual_slot.h  global.gba_dual_slot.h  global.h  graphics.h  strings.h
include/config/: overworld.h
include/constants/: event_objects.h  gba_dual_slot.h  heal_locations.h  script_menu.h  vars.h
src/: battle_main.c  event_object_movement.c  gba_dual_slot.c  intro.c  main_menu.c  strings.c
src/data/: heal_locations.json  script_menu.h  wild_encounters.json
src/data/object_events/: object_event_graphics.h  object_event_graphics_info.h  object_event_graphics_info_pointers.h  object_event_pic_tables.h
src/data/region_map/: region_map_sections.json
src/data/tilesets/: graphics.h  headers.h  metatiles.h
